# cubature_wrap

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  cubature_wrap.hpp  main.cpp
